<resources>
    <string name="app_name">Thracia Stat Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This program will let you calculate the stats of all characters when using crusader scrolls, helping you track your progress throughout the game</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="compare">Compare</string>
    <string name="level">Level</string>
    <string name="current_hp">Current HP</string>
    <string name="character_name">Character: </string>
    <string name="edit_character">Edit Character</string>
    <string name="base_level">Base Level</string>
    <string name="hp">HP</string>
    <string name="base_hp">Base HP</string>
    <string name="scroll_name">Scroll: </string>
    <string name="magic">Magic</string>
    <string name="hp_growth_rate">HP Growth Rate</string>
    <string name="edit_scroll">Edit Scroll</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="con">Con</string>
    <string name="mov">Mov</string>
    <string name="def">Def</string>
    <string name="lck">Lck</string>
    <string name="spd">Spd</string>
    <string name="skl">Skl</string>
    <string name="mag">Mag</string>
    <string name="str">Str</string>
    <string name="average_stats">Average Stats</string>
    <string name="update">Update</string>
    <string name="enter_level_of_promotion">Enter level of promotion</string>
    <string name="available_characters">Available Characters</string>
    <string name="growth_stats">Growth Stats</string>
    <string name="base_stats">Base Stats</string>
    <string name="growth_rates">Growth Rates</string>
    <string name="add_character">Add Character</string>
    <string name="base_mag">Base Mag</string>
    <string name="mag_growth">Mag Growth</string>
    <string name="mag_gain">Mag Gain</string>
    <string name="str_gain">Str Gain</string>
    <string name="str_growth">Str Growth</string>
    <string name="base_str">Base Str</string>
    <string name="hp_growth">HP Growth</string>
    <string name="hp_gain">HP Gain</string>
    <string name="base_skl">Base Skl</string>
    <string name="skl_growth">Skl Growth</string>
    <string name="skl_gain">Skl Gain</string>
    <string name="spd_growth">Spd Growth</string>
    <string name="name">Name</string>
    <string name="base_spd">Base Spd</string>
    <string name="spd_gain">Spd Gain</string>
    <string name="base_lck">Base Lck</string>
    <string name="lck_growth">Lck Growth</string>
    <string name="lck_gain">Lck Gain</string>
    <string name="base_def">Base Def</string>
    <string name="def_growth">Def Growth</string>
    <string name="def_gain">Def Gain</string>
    <string name="base_con">Base Con</string>
    <string name="con_growth">Con Growth</string>
    <string name="con_gain">Con Gain</string>
    <string name="base_mov">Base Mov</string>
    <string name="mov_growth">Mov Growth</string>
    <string name="mov_gain">Mov Gain</string>
    <string name="n_a">N/A</string>
    <string name="promotion_gains">Promotion Gains</string>
    <string name="current_con">Current Con.</string>
    <string name="current_def">Current Def.</string>
    <string name="current_lck">Current Luck</string>
    <string name="current_spd">Current Speed</string>
    <string name="current_skl">Current Skill</string>
    <string name="current_mag">Current Mag</string>
    <string name="current_str">Current Str.</string>
    <string name="current_move">Current Move</string>
</resources>